--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@
 *.i*86
 *.x86_64
 *.hex
+./hotrace
 
 # Debug Files
 *.dSYM/
@@ -51,4 +52,3 @@ cmake-build-debug/
 
 # Other Stuff
 example/
-hotrace
